--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,20 @@
 # Backend Framework
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
+flask==3.0.0
+flask-cors==4.0.0
 
-# Template Engine (for server-side rendering if needed)
-jinja2==3.1.2
-python-multipart==0.0.6
+# AI/ML APIs
+google-generativeai==0.3.2
 
-# CORS is handled by FastAPI's built-in CORSMiddleware (no extra package needed)
+# PDF Processing
+pypdf2==3.0.1
 
-# Database (optional - uncomment if needed)
-# sqlalchemy==2.0.23
-# sqlite3 (built-in, no install needed)
+# HTTP requests
+requests==2.31.0
 
 # Environment variables
 python-dotenv==1.0.0
 
-# HTTP requests (if backend needs to call external APIs)
-httpx==0.25.2
-
-# Data validation and serialization
-pydantic==2.5.0
-pydantic-settings==2.1.0
+# Database
+sqlalchemy==2.0.23
+alembic==1.13.1
 
