Implement Google Scholar import and UI improvements
- Add Google Scholar profile import functionality
  - Create scholar_scraper.py utility for scraping Google Scholar profiles
  - Integrate scraper into profile creation endpoint
  - Support both manual and Google Scholar profile creation methods
  - Store scraped scholar data in database

- Upgrade SearcherAgent to Gemini 2.5 Pro
  - Change Research Selected Ideas agent to use gemini-2.5-pro
  - Keep ProfilerAgent and ReaderAgent on gemini-2.5-flash for speed

- Update UI bullet icons in Summary and Methodology sections
  - Replace dash bullets with small round dots
  - Use dark green color (#065f46) for bullet dots
  - Improve visual consistency with flexbox layout

- Add dependencies: scholarly and beautifulsoup4 for Google Scholar scraping

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,12 @@ pypdf2==3.0.1
 # HTTP requests
 requests==2.31.0
 
+# Google Scholar scraping
+scholarly==1.7.9
+
+# HTML parsing
+beautifulsoup4==4.12.2
+
 # Environment variables
 python-dotenv==1.0.0
 
